# AOC

./: .gitignore  Cargo.toml  README.md
2020/: Cargo.toml
2020/bench_results/: day_five  day_four  day_one  day_six  day_three  day_two
2020/bench_results/criterion/criterion/report/: index.html
2020/bench_results/criterion/day 1, part 1/base/: estimates.json  raw.csv  sample.json  tukey.json
2020/bench_results/criterion/day 1, part 1/change/: estimates.json
2020/bench_results/criterion/day 1, part 1/new/: raw.csv  sample.json  tukey.json
2020/bench_results/criterion/day 1, part 1/report/: index.html
2020/bench_results/criterion/day 1, part 2/base/: estimates.json  raw.csv  sample.json  tukey.json
2020/bench_results/criterion/day 1, part 2/change/: estimates.json
2020/bench_results/criterion/day 1, part 2/new/: estimates.json  raw.csv  sample.json  tukey.json
2020/bench_results/criterion/day 1, part 2/report/: index.html
2020/bench_results/criterion/day 2, part 1/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
2020/bench_results/criterion/day 2, part 1/change/: estimates.json
2020/bench_results/criterion/day 2, part 1/new/: raw.csv  sample.json  tukey.json
2020/bench_results/criterion/day 2, part 1/report/: index.html
2020/bench_results/criterion/day 2, part 2/base/: estimates.json  raw.csv  sample.json  tukey.json
2020/bench_results/criterion/report/: index.html
2020/benches/: benchmarks.rs
2020/scripts/: bench.sh  build.sh  cross-build.sh  publish_benchmark_results.sh  test.sh  update_gh_pages.sh
2020/src/: main.rs
2020/src/input/: mod.rs
2020/src/puzzle/: mod.rs
2020/src/puzzle/eight/: mod.rs
2020/src/puzzle/five/: mod.rs
2020/src/puzzle/four/: mod.rs
2020/src/puzzle/nine/: mod.rs
2020/src/puzzle/one/: mod.rs
2020/src/puzzle/seven/: mod.rs
2020/src/puzzle/six/: mod.rs
2020/src/puzzle/thirteen/: mod.rs
2020/src/puzzle/three/: mod.rs
2020/src/puzzle/twelve/: mod.rs
2020/src/puzzle/twenty/: mod.rs
2020/src/puzzle/twentytwo/: mod.rs
2020/src/puzzle/two/: mod.rs
2020/www/: index.html  index.js  package-lock.json  package.json
2020/www/.bin/: create-wasm-app.js
2020/www/criterion/report/: index.html
2020/www/pkg/: README.md  aoc_2020.d.ts  aoc_2020.js  aoc_2020_bg.js  aoc_2020_bg.wasm  aoc_2020_bg.wasm.d.ts  package.json
2022/: Cargo.nix  Cargo.toml  README.md  flake.nix  pre-commit-checks.nix
2022/benches/: benchmarks.rs
2022/nix/one/: default.nix
2022/src/: bin.rs  lib.rs  main.rs
2022/src/input/: mod.rs
2022/src/puzzle/: mod.rs
2022/src/puzzle/one/: mod.rs
2022/src/puzzle/twentyfour/: mod.rs
src/: main.rs
(+322 files in other folders)
