[package]
name = "aoc_2022"
version = "0.0.1"
authors = ["jayrovacsek"]
edition = "2021"
description = "A crate/lib to host code for the AoC 2022"
repository = "https://github.com/JayRovacsek/AOC.git"
license = "GPL-3.0"

[dependencies]
rand = "0.7.2"
humantime = "2.0.1"
rayon = "1.1"
regex = "1.0"
lazy_static = "1.4.0"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
